# bestlogs-rs

./: .gitignore  Cargo.toml  README.md  config.json  example_config.json
src/: config.rs  ivr.rs  logs.rs  main.rs  umami.rs
