[package]
name = "bestlogs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }

thiserror = "2"
anyhow = "1.0"
