[package]
name = "bestlogs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3", features = ["compression"] }
poem-openapi = { version = "5", features = ["redoc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }

# thiserror = "2"
anyhow = "1.0"

mimalloc = { version = "0.1", default-features = false }
