[package]
name = "bestlogs-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"


[dependencies]
poem = { version = "3", features = ["compression"] }
poem-openapi = { version = "5", features = ["redoc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }

thiserror = "2"
anyhow = "1.0"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

jemalloc_pprof = { version = "0.6" }


[profile.release-debug]
inherits = "release"
debug = true
